--- a/views/contact/contact.pug
+++ b/views/contact/contact.pug
@@ -1,6 +1,6 @@
 extends ../layout/default
 block content
-  .title-wrapper
+  .Ctitle-wrapper
     .color 
     .title Contact
   .con-wrapper 
@@ -13,14 +13,14 @@ block content
           .hello.he4 이메일
             .pen
           .hello.he5 로 연락 주세요.
+          .line 
         .hello.he6 지금까지 성장하는 개발자 이세빈이였습니다 !
-    .line 
-    .container .container 
-      .contact-wrapper
-        h1 h1
-          .contact-line
-        .contact CONTACT
-      .p.git-hub .git-hub :  
-        a(href="https://github.com/gobltpqls99") https://github.com/gobltpqls99 
-      .p.e-mail .e-mail : gobltpqls99@naver.com
-      .p.cell-phone .cell-phone : 010-7197-3595
+        .container .container 
+          .contact-wrapper
+            h1 h1
+              .contact-line
+            .contact CONTACT
+          .p.git-hub .git-hub :  
+            a(href="https://github.com/gobltpqls99") https://github.com/gobltpqls99 
+          .p.e-mail .e-mail : gobltpqls99@naver.com
+          .p.cell-phone .cell-phone : 010-7197-3595
