--- a/views/home/home.pug
+++ b/views/home/home.pug
@@ -2,10 +2,10 @@ extends ../layout/default
 block content
 
 	.img-wrapper 
-		.title-wrapper
+		.Htitle-wrapper
 			.title-wrap 
 				.box
-				.line
+				.h-line
 				.p.hello 안녕하세요
 				.title
 					.p.p2 웹 개발자
