--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -1,13 +1,13 @@
 extends ../layout/default
 block content
-	.container
-		.title-wrapper
+	.Pcontainer
+		.Ptitle-wrapper
 			.color 
 			.main-title Projects
 		.line
 			.dot1 
 				.html html / css / javascript
-					.box-wrapper
+					.Pbox-wrapper
 						.box.a(href="")
 							img.box(src="", alt="")
 						.box.a(href="")
@@ -16,7 +16,7 @@ block content
 							img.box(src="", alt="")
 			.dot2 
 				.node node.js
-					.box-wrapper
+					.Pbox-wrapper
 						.box.a(href="")
 							img.box(src="", alt="")
 						.box.a(href="")
@@ -25,7 +25,7 @@ block content
 							img.box(src="", alt="")
 			.dot3 
 				.vue react / vue
-					.box-wrapper
+					.Pbox-wrapper
 						.box.a(href="")
 							img.box(src="", alt="")
 						.box.a(href="")
