--- a/views/skills/skills.pug
+++ b/views/skills/skills.pug
@@ -1,28 +1,29 @@
 extends ../layout/default
 block content
-	.title-wrapper
+	.Stitle-wrapper
 		.color 
 		.title Skills
-	.box-wrapper 
+	.Sbox-wrapper 
 		.frameworks frameworks
 			.tape
-			.line
+			.s-line
 			.img-box
-				img(src="../img/sass.png", alt="" style="width: 70px;")
+				img(src="../img/sass.png", alt="icon-img" style="width: 70px;")
 				img(src="../img/bootstrap.png", alt="" style="width: 70px;")
-				img(src="../img/firebase.png", alt="")
-				img(src="../img/es6.png", alt="" style="width: 70px; height:70px;")
-				img(src="../img/jquery.png", alt="" style="width: 70px; height:70px;")
-				img(src="../img/react.png", alt="" style="width: 70px;")
-				img(src="../img/vue.png", alt="" style="width: 70px;")
+				img(src="../img/firebase.png", alt="icon-img")
+				img(src="../img/es6.png", alt="icon-img" style="width: 70px; height:70px;")
+				img(src="../img/jquery.png", alt="icon-img" style="width: 70px; height:70px;")
+				img(src="../img/react.png", alt="icon-img" style="width: 70px;")
+				img(src="../img/vue.png", alt="icon-img" style="width: 70px;")
 		.frontend front-end
 			.img-box
+				div AJAX
 				img(src="../img/html.png", alt="" style="width: 70px;")
 				img(src="../img/css.png", alt="" style="width: 70px;")
 				img(src="../img/js.png", alt="" style="width: 70px; height:70px;")
 				img(src="../img/pug.png", alt="" style="width: 85px;")
 		.backend back-end
-			.line
+			.s-line
 			.img-box
 				img(src="../img/mysql.png", alt="" style="width: 70px;")
 				img(src="../img/aws.png", alt="" style="width: 70px;")
@@ -30,12 +31,12 @@ block content
 				//- img(src="../img/expressjs.png", alt="" style="width: 100px;")
 				div express
 		.tools tools
-			.line
+			.s-line
 			.img-box
 				img(src="../img/git.png", alt="" style="width: 70px;")
 				img(src="../img/vs.png", alt="" style="width: 70px;")
 		.design design		
-			.line
+			.s-line
 			.img-box
 				img(src="../img/ps.png", alt="" style="width: 70px; height:70px;")
 				img(src="../img/xd.png", alt="" style="width: 70px; height:70px;")
