--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -1,6 +1,8 @@
 @import './mixin';
 
-.title-wrapper {
+.Ctitle-wrapper {
+  margin-bottom: 3em;
+  width: 100%; height: 100px;
   position: absolute;
   top: 12%; left: 15%;
   color: #dedede;
@@ -17,86 +19,127 @@
   width: 100%; height: 100vh;
   position: relative;
   .text-wrapper {
-    width: 570px; height: 200px;
+    width: 100%; height: 200px;
     color: #dedede; font-family: $Notos;
-    position: absolute; bottom: 46.7%; left: 15%;
+    position: absolute; top: 35%; left: 15%;
     font-size: 1.2em;
     .text-wrap {
       .hello {
         margin-top: 1.3em;
       }
       .text{
+        position: relative;
         display: flex; justify-content: baseline;
         .hello { margin-top: 1.3em; padding-right: 0.5em; }
         .he4 { position: relative; width: 66px;
           .pen {
             width: 100%; height: 12px; background-color: #4bf1f14f;
             position: absolute; top: 60%; left: -5%;
+            @include tablet { width: 80%; }
+            @include mobile { width: 70%; }
           }
         }
       }
-    }
-  }
-  .line {
-    width: 100%; height: 0.01em;
-    background-color: #4bf1f1;
-    position: absolute; left: 43%; top: 45.5%;
-  }
-  .container {
-    position: absolute; bottom: 20%; left: 65%;
-    color: #dedede;
-    font-size: 1.45em;
-    font-family: $d2;
-    .contact-wrapper {
-      display: flex; align-items: baseline;
-      font-size: 1.5em;
-      h1 {
-        padding: 1.3em 0;
-        padding-left: 1.5em;
-        padding-right: 0.5em;
-        position: relative;
-        .contact-line {
-          position: absolute; left: 44.5%; bottom: 35%;
-          width: 180px; height: 17px; background-color: #4bf1f14f;
+      .line {
+        width: 100%; height: 0.01em;
+        background-color: #4bf1f1;
+        position: absolute; left: 27%; bottom: 8%;
+      }
+      .container {
+        position: absolute; top: 93%; right: -10%;
+        color: #dedede;
+        font-size: 1.45em;
+        font-family: $d2;
+        .contact-wrapper {
+          display: flex; align-items: baseline;
+          font-size: 1.5em;
+          h1 {
+            padding: 1.3em 0;
+            padding-left: 1.5em;
+            padding-right: 0.5em;
+            position: relative;
+            .contact-line {
+              position: absolute; left: 44.5%; bottom: 35%;
+              width: 180px; height: 17px; background-color: #4bf1f14f;
+            }
+          }
+        }
+        .p {
+          padding: 0.5em 2em;
+          font-size: 0.7em;
         }
       }
     }
-    .p {
-      padding: 0.5em 2em;
-      font-size: 0.7em;
+    @include original {
+      .text-wrap {
+        .text {
+          .line { left: 32%; }
+        }
+        .container { top: 110%; }
+      }
     }
-  }
-  @include desktopL {
-    .line { left: 49%; }
-  }
-  @include desktopM {
-    .line { left: 55%; }
-  }
-  @include desktopM1 {
-    .line { left: 60%; }
-  }
-  @include desktopS {
-    .line { left: 0%; top: 60%; }
-  }
-  @include desktop {
-    .container {
-      right: 60%; bottom: 9%;
-      transform: translateX(-60%);
+    @include desktopL {
+      .text-wrap {
+        .text {
+          .line { left: 35%; }
+        }
+      }
     }
-  }
-  @include tablet {
-    .text-wrapper {
+    @include desktopM {
+      .text-wrap {
+        .text {
+          .line { left: 37%; }
+        }
+      }
+    }
+    @include desktopM1 {
+      .text-wrap {
+        .text {
+          .line { left: 40%; }
+        }
+      }
+    }
+    @include desktopS {
+      .text-wrap {
+        .text {
+          .line { left: 45%; }
+        }
+      }
+    }
+    @include desktop {
+      .text-wrap {
+        .text {
+          .line { left: -15%;  bottom: -150%;}
+        }
+        .container {
+          top: 110%; right: 0%;
+        }
+      }
+    }
+    @include laptop {
+      .text-wrap {
+        .container {
+          left: 50%; transform: translateX(-50%);
+        }
+      }
+    }
+    @include tablet {
       font-size: 1em;
+      .text-wrap {
+        .text {
+          .line { bottom: -200%; }
+        }
+      }
     }
-  }
-  @include mobile {
-    font-size: 0.8em;
-    .text-wrapper { width: 400px; margin-left: 10px; }
-    .line { top: 48%; }
-    .container { bottom: 27%; left: 20%; transform: translateX(0); }
-  }
-  @include mobileS {
-    .text-wrapper { display: none; }
-    .container { display: none; }
+    @include mobile {
+      font-size: 0.8em;
+      .text-wrapper {
+        width: 400px; margin-left: 10px;
+        .text-wrap { .line {bottom: 0%; } }
+      }
+    }
+    @include mobileS {
+      display: none;
+    }
   }
 }
