--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -1,16 +1,15 @@
 @import './mixin';
 
-@include original {
-	body {
-		overflow: hidden;
-	}
+
+body {
+	overflow: hidden;
 }
 
 .img-wrapper {
 	width: 100%; height: 100%;
 	background: url(../img/1-2.jpg) no-repeat center center fixed;
 	position: absolute; top: 0; left: 70px;
-	.title-wrapper {
+	.Htitle-wrapper {
 		color: #dedede;
 		font-size: 3em;
 		position: absolute; top: 45%; left: 50%;
@@ -25,12 +24,10 @@
 					left: -25%;
 				}
 			}
-			.line {
-				width: 100vh; height: 0.02em; background-color: #4af1f1; position: absolute; left: 75.2%; top: 43%;
-				@include tablet {
-					top: 7%;
-					left: 37%;
-				}
+			.h-line {
+				width: 100vh; height: 0.02em; background-color: #4af1f1; position: absolute; left: 70%; top: 43%;
+				@include desktopM { left: 53%; }
+				@include tablet { top: 7%; left: 37%; }
 			}
 			.p {
 				padding-right: 0.5em;
