--- a/public/scss/projects.scss
+++ b/public/scss/projects.scss
@@ -1,8 +1,8 @@
 @import './mixin';
 
 
-.container {
-	.title-wrapper {
+.Pcontainer {
+	.Ptitle-wrapper {
 		position: absolute;
 		top: 12%; left: 15%;
 		color: #dedede;
@@ -29,8 +29,8 @@
 				width: 300px; color: #dedede;
 				font-size: 1.3em; font-family: $d2;
 				position: absolute; top: -30%; left: 1.8em;
-				.box-wrapper{
-					position: absolute; top: 1.2em;
+				.Pbox-wrapper{
+					position: absolute; top: 2em; left: 0;
 					display: flex;
 					.box {
 						width: 300px; height: 200px; background-color: #dedede; margin-right: 1.5em;
@@ -47,8 +47,8 @@
 				width: 300px; color: #dedede;
 				font-size: 1.3em; font-family: $d2;
 				position: absolute; top: -30%; left: 1.8em;
-				.box-wrapper{
-					position: absolute; top: 1.2em;
+				.Pbox-wrapper{
+					position: absolute; top: 2em; left: 0;
 					display: flex;
 					.box {
 						width: 300px; height: 200px; background-color: #dedede; margin-right: 1.5em;
@@ -65,8 +65,8 @@
 				width: 300px; color: #dedede;
 				font-size: 1.3em; font-family: $d2;
 				position: absolute; top: -30%; left: 1.8em;
-				.box-wrapper{
-					position: absolute; top: 1.2em;
+				.Pbox-wrapper{
+					position: absolute; top: 2em; left: 0;
 					display: flex;
 					.box {
 						width: 300px; height: 200px; background-color: #dedede; margin-right: 1.5em;
@@ -83,7 +83,7 @@
 			.dot1 {
 				top: 8em;
 				.html {
-					.box-wrapper{ top: 1.2em; flex-direction: column;
+					.Pbox-wrapper{ top: 1.2em; flex-direction: column;
 						.box { margin: 1em 0; }
 					}				
 				}
@@ -91,7 +91,7 @@
 			.dot2 {
 				top: 70em;
 				.node {
-					.box-wrapper{ top: 1.2em; flex-direction: column;
+					.Pbox-wrapper{ top: 1.2em; flex-direction: column;
 						.box { margin: 1em 0; }
 					}				
 				}
@@ -99,7 +99,7 @@
 			.dot3 {
 				top: 130em;
 				.vue {
-					.box-wrapper{ top: 1.2em;  flex-direction: column;
+					.Pbox-wrapper{ top: 1.2em;  flex-direction: column;
 						.box { margin: 1em 0; }
 					}				
 				}
@@ -107,14 +107,14 @@
 		}
 	}
 }
-@include original {
+
 	body {
 		overflow-y: auto;
 		min-width: 100%; min-height: 100%;
 		background-color: #1d1d1d;
 		background: url(../img/p3-2.jpg) no-repeat center center fixed;
+		@include mobileS {
+			.line { display: none; }
+		}
 	}
-	@include mobileS {
-    .line { display: none; }
-  }
-}
+
