--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -112,7 +112,7 @@
   position: absolute;
   left: 44.5%;
   bottom: 35%;
-  width: 180px;
+  width: 180%;
   height: 17px;
   background-color: #4bf1f14f;
 }
