--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,7 @@ body {
 .img-wrapper {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   background: url(../img/1-2.jpg) no-repeat center center fixed;
   position: absolute;
   top: 0;
@@ -16,8 +17,8 @@ body {
   font-size: 3em;
   position: absolute;
   top: 45%;
-  left: 50%;
-  transform: translate(-50%, -45%);
+  left: 43%;
+  transform: translate(-43%, -45%);
   width: 57%;
 }
 
@@ -36,36 +37,30 @@ body {
 
 @media screen and (max-width: 767px) {
   .img-wrapper .Htitle-wrapper .title-wrap .box {
-    width: 0.5em;
-    height: 1.9em;
-    left: -25%;
+    top: 0%;
   }
 }
 
 .img-wrapper .Htitle-wrapper .title-wrap .h-line {
-  width: 100vh;
+  width: 200%;
   height: 0.02em;
   background-color: #4af1f1;
   position: absolute;
-  left: 70%;
-  top: 43%;
+  left: 75%;
+  top: 50%;
 }
 
 @media screen and (max-width: 1580px) {
   .img-wrapper .Htitle-wrapper .title-wrap .h-line {
-    left: 53%;
+    left: 60%;
   }
 }
 
 @media screen and (max-width: 767px) {
   .img-wrapper .Htitle-wrapper .title-wrap .h-line {
-    top: 7%;
-    left: 37%;
+    top: 25%;
+    left: -30%;
   }
-}
-
-.img-wrapper .Htitle-wrapper .title-wrap .p {
-  padding-right: 0.5em;
 }
 
 .img-wrapper .Htitle-wrapper .title-wrap .hello {
@@ -74,80 +69,83 @@ body {
   padding-bottom: 0.5em;
 }
 
-@media screen and (max-width: 767px) {
-  .img-wrapper .Htitle-wrapper .title-wrap .hello {
-    font-size: 2em;
-    padding-top: 0.1em;
-    padding-bottom: 2em;
-    margin-left: -1.8em;
-  }
-}
-
 .img-wrapper .Htitle-wrapper .title-wrap .title {
-  display: flex;
-  align-items: baseline;
   font-size: 1.5em;
   padding-left: 1em;
 }
 
+.img-wrapper .Htitle-wrapper .title-wrap .title .p {
+  padding-left: 0.5em;
+}
+
 .img-wrapper .Htitle-wrapper .title-wrap .title .p2 {
+  display: flex;
+  align-items: baseline;
   color: #4af1f1;
   font-family: "Noto Serif KR", serif;
+  width: 800px;
+}
+
+.img-wrapper .Htitle-wrapper .title-wrap .title .p2 .typing-bar {
+  width: 0.2em;
+  height: 1em;
+  margin-left: 0.2em;
+  background-color: #4af1f1;
+  display: inline-block;
+  animation-name: cursor;
+  animation-duration: 0.3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes cursor {
+  0% {
+    border-right: 1px solid #fff;
+  }
+  50% {
+    border-right: 1px solid #000;
+  }
+  100% {
+    border-right: 1px solid #fff;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .img-wrapper .Htitle-wrapper .title-wrap .title .p2 {
     max-width: 100%;
-    font-size: 2.3em;
-    padding-bottom: 0.2em;
+    font-size: 1.8em;
+    margin-top: 0.5em;
   }
 }
 
 .img-wrapper .Htitle-wrapper .title-wrap .title .p3 {
-  font-size: 1.2em;
+  max-width: 100%;
+  display: flex;
+  align-items: baseline;
+  margin-top: 0.7em;
+  margin-left: 10em;
+  font-size: 0.7em;
   font-family: "Noto Sans KR", sans-serif;
 }
 
-@media screen and (max-width: 767px) {
-  .img-wrapper .Htitle-wrapper .title-wrap .title .p3 {
-    font-size: 2em;
-    padding-left: 2em;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .img-wrapper .Htitle-wrapper .title-wrap .title {
-    max-width: 100%;
-    display: block;
-    font-size: 1.5em;
-  }
-}
-
-.img-wrapper .Htitle-wrapper .title-wrap .title .p4 {
+.img-wrapper .Htitle-wrapper .title-wrap .title .p3 .p4 {
+  max-width: 100%;
   font-size: 0.9em;
   font-family: "Noto Serif KR", serif;
 }
 
 @media screen and (max-width: 767px) {
-  .img-wrapper .Htitle-wrapper .title-wrap .title .p4 {
-    font-size: 1.3em;
-    padding-left: 4.1em;
-    padding-top: 1em;
+  .img-wrapper .Htitle-wrapper .title-wrap .title .p3 {
+    width: 400px;
+    padding-left: 3em;
   }
 }
 
 .img-wrapper .Htitle-wrapper .title-wrap .p5 {
-  font-size: 0.6em;
-  padding-left: 5em;
-  padding-top: 0.7em;
-  font-family: "Source Sans Pro", sans-serif;
-}
-
-@media screen and (max-width: 767px) {
-  .img-wrapper .Htitle-wrapper .title-wrap .p5 {
-    position: absolute;
-    bottom: -20em;
-  }
+  font-size: 0.4em;
+  position: absolute;
+  left: 50%;
+  bottom: -35%;
+  transform: translateX(-50%);
 }
 
 @media screen and (max-width: 1700px) {
@@ -170,7 +168,7 @@ body {
 
 @media screen and (max-width: 991px) {
   .img-wrapper .Htitle-wrapper {
-    font-size: 1.2em;
+    font-size: 1em;
   }
 }
 
