--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -60,7 +60,7 @@
             position: relative;
             .contact-line {
               position: absolute; left: 44.5%; bottom: 35%;
-              width: 180px; height: 17px; background-color: #4bf1f14f;
+              width: 180%; height: 17px; background-color: #4bf1f14f;
             }
           }
         }
