--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -7,86 +7,83 @@ body {
 
 .img-wrapper {
 	width: 100%; height: 100%;
+	overflow: hidden;
 	background: url(../img/1-2.jpg) no-repeat center center fixed;
 	position: absolute; top: 0; left: 70px;
 	.Htitle-wrapper {
 		color: #dedede;
 		font-size: 3em;
-		position: absolute; top: 45%; left: 50%;
-		transform: translate(-50%, -45%);
+		position: absolute; top: 45%; left: 43%;
+		transform: translate(-43%, -45%);
 		width: 57%;
 		.title-wrap {
 			position: relative;
 			.box {
 				width: 0.2em; height: 1.2em; background-color: #4af1f1; position: absolute; left: -1.7%; top: 1.5%;
-				@include tablet {
-					width: 0.5em; height: 1.9em;
-					left: -25%;
-				}
+				@include tablet { top: 0%; }
 			}
 			.h-line {
-				width: 100vh; height: 0.02em; background-color: #4af1f1; position: absolute; left: 70%; top: 43%;
-				@include desktopM { left: 53%; }
-				@include tablet { top: 7%; left: 37%; }
-			}
-			.p {
-				padding-right: 0.5em;
+				width: 200%; height: 0.02em; background-color: #4af1f1; position: absolute; left: 75%; top: 50%;
+				@include desktopM { left: 60%; }
+				@include tablet { top: 25%; left: -30%; }
 			}
 			.hello {
 				font-size: 1.2em;
 				font-family: $Notof;
 				padding-bottom: 0.5em;
-				@include tablet {
-					font-size: 2em;
-					padding-top: 0.1em;
-					padding-bottom: 2em;
-					margin-left: -1.8em;
-				}
 			}
 			.title {
-				display: flex; align-items: baseline;
 				font-size: 1.5em;
 				padding-left: 1em;
+				.p { padding-left: 0.5em; }
 				.p2 {
+					display: flex; align-items: baseline;
 					color: #4af1f1;
 					font-family: $Notof;
+					width: 800px;
+				#typing{ }
+				.typing-bar{
+					width: 0.2em; height: 1em;
+					margin-left: 0.2em;
+					background-color: #4af1f1;
+					display: inline-block; 
+					animation-name: cursor; 
+					animation-duration: 0.3s; 
+					animation-iteration-count: infinite; 
+				} 
+				@keyframes cursor{ 
+					0%{border-right: 1px solid #fff} 
+					50%{border-right: 1px solid #000} 
+					100%{border-right: 1px solid #fff} 
+				}
 					@include tablet {
 						max-width: 100%;
-						font-size: 2.3em;
-						padding-bottom: 0.2em;
+						font-size: 1.8em;
+						margin-top: 0.5em;
 					}
 				}
 				.p3 {
-					font-size: 1.2em;
+					max-width: 100%;
+					display: flex; align-items: baseline;
+					margin-top: 0.7em;
+					margin-left: 10em;
+					font-size: 0.7em;
 					font-family: $Notos;
-					@include tablet {
-						font-size: 2em;
-						padding-left: 2em;
+					.p4 {
+						max-width: 100%;
+						font-size: 0.9em;
+						font-family: $Notof;
 					}
-				}
-				@include tablet {
-					max-width: 100%; display: block;
-					font-size: 1.5em;
-				}
-				.p4 {
-					font-size: 0.9em;
-					font-family: $Notof;
 					@include tablet {
-					font-size: 1.3em;
-					padding-left: 4.1em;
-					padding-top: 1em;
+						width: 400px;
+						padding-left: 3em;
 					}
 				}
 			}
 			.p5 {
-				font-size: 0.6em;
-				padding-left: 5em;
-				padding-top: 0.7em;
-				font-family: $Source;
-				@include tablet {
-					position: absolute;
-					bottom: -20em;
-				}
+				font-size: 0.4em;
+				position: absolute; left: 50%; bottom: -35%;
+				transform: translateX(-50%);
 			}
 		}
 		@include desktopL {
@@ -99,7 +96,7 @@ body {
 			font-size: 1.5em;
 		}
 		@include laptop {
-			font-size: 1.2em;
+			font-size: 1em;
 		}
 		@include mobile {
 			font-size: 1em;
