--- a/views/home/home.pug
+++ b/views/home/home.pug
@@ -8,7 +8,9 @@ block content
 				.h-line
 				.p.hello 안녕하세요
 				.title
-					.p.p2 웹 개발자
+					.p.p2
+						#typing
+						.typing-bar
 					.p.p3 이세빈
-					.p.p4 입니다.
+						.p.p4 입니다.
 				.p5 Welcome My PROTFOLIO
