--- a/views/layout/default.pug
+++ b/views/layout/default.pug
@@ -13,8 +13,9 @@ html(lang="ko")
 		link(rel="stylesheet" href="/css/skills.css")
 		link(rel="stylesheet" href="/css/projects.css")
 		link(rel="stylesheet" href="/css/contact.css")
-		script(src="/js/jquery-3.5.1.min.js")
 		block js
+		script(src="/js/jquery-3.5.1.min.js")
+		script(src="/js/home.js")
 	body
 		include ../include/header
 		block content
