--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -1,4 +1,6 @@
 extends ../layout/default
+block css 
+	link(rel="stylesheet", href="/css/projects.css")
 block content
 	.Pcontainer
 		.Ptitle-wrapper
