--- a/views/skills/skills.pug
+++ b/views/skills/skills.pug
@@ -1,8 +1,11 @@
 extends ../layout/default
+block css 
+	link(rel="stylesheet" href="/css/skills.css")
 block content
 	.Stitle-wrapper
 		.color 
 		.title Skills
+		.img-wrap 
 	.Sbox-wrapper 
 		.frameworks frameworks
 			.tape
