--- a/public/css/common.css
+++ b/public/css/common.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap");
+body {
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
   color: inherit;
