--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,3 +1,11 @@
+body {
+  overflow-y: auto;
+  min-width: 100%;
+  min-height: 100%;
+  background-color: #1d1d1d;
+  background: url(../img/p3-2.jpg) no-repeat center center fixed;
+}
+
 .Ctitle-wrapper {
   margin-bottom: 3em;
   width: 100%;
