--- a/public/css/home.css
+++ b/public/css/home.css
@@ -58,7 +58,7 @@ body {
 
 @media screen and (max-width: 767px) {
   .img-wrapper .Htitle-wrapper .title-wrap .h-line {
-    top: 25%;
+    top: 28%;
     left: -30%;
   }
 }
@@ -86,34 +86,29 @@ body {
   width: 800px;
 }
 
-.img-wrapper .Htitle-wrapper .title-wrap .title .p2 .typing-bar {
-  width: 0.2em;
-  height: 1em;
-  margin-left: 0.2em;
-  background-color: #4af1f1;
+.img-wrapper .Htitle-wrapper .title-wrap .title .p2 #typing {
+  position: relative;
   display: inline-block;
-  animation-name: cursor;
-  animation-duration: 0.3s;
-  animation-iteration-count: infinite;
 }
 
-@keyframes cursor {
-  0% {
-    border-right: 1px solid #fff;
-  }
-  50% {
-    border-right: 1px solid #000;
-  }
-  100% {
-    border-right: 1px solid #fff;
-  }
+.img-wrapper .Htitle-wrapper .title-wrap .title .p2 #typing::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: -10px;
+  width: 4px;
+  height: 100%;
+  background-color: #dedede;
+}
+
+.img-wrapper .Htitle-wrapper .title-wrap .title .p2 #typing.active::after {
+  display: none;
 }
 
 @media screen and (max-width: 767px) {
   .img-wrapper .Htitle-wrapper .title-wrap .title .p2 {
-    max-width: 100%;
-    font-size: 1.8em;
-    margin-top: 0.5em;
+    text-align: center;
   }
 }
 
@@ -137,6 +132,15 @@ body {
   .img-wrapper .Htitle-wrapper .title-wrap .title .p3 {
     width: 400px;
     padding-left: 3em;
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .img-wrapper .Htitle-wrapper .title-wrap .title {
+    margin-top: 1em;
+    font-size: 2.5em;
+    padding-left: 0;
   }
 }
 
