--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -16,6 +16,14 @@
   margin-right: 0.1em;
 }
 
+body {
+  overflow-y: auto;
+  min-width: 100%;
+  min-height: 100%;
+  background-color: #1d1d1d;
+  background: url(../img/p3-2.jpg) no-repeat center center fixed;
+}
+
 .Sbox-wrapper {
   font-family: "Nanum Gothic Coding", monospace;
   width: 100%;
@@ -228,9 +236,8 @@
 
 @media screen and (max-width: 991px) {
   .Sbox-wrapper {
-    position: static;
-    margin-top: 10em;
-    margin-left: 20%;
+    margin-top: 7em;
+    margin-left: -15%;
   }
 }
 
