--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -6,6 +6,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap');
 
 
+body { overflow: hidden; }
+
 a {
   text-decoration: none;
   color: inherit;
