--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -1,5 +1,12 @@
 @import './mixin';
 
+body {
+  overflow-y: auto;
+  min-width: 100%; min-height: 100%;
+  background-color: #1d1d1d;
+  background: url(../img/p3-2.jpg) no-repeat center center fixed;
+}
+
 .Ctitle-wrapper {
   margin-bottom: 3em;
   width: 100%; height: 100px;
