--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -25,7 +25,7 @@ body {
 			.h-line {
 				width: 200%; height: 0.02em; background-color: #4af1f1; position: absolute; left: 75%; top: 50%;
 				@include desktopM { left: 60%; }
-				@include tablet { top: 25%; left: -30%; }
+				@include tablet { top: 28%; left: -30%; }
 			}
 			.hello {
 				font-size: 1.2em;
@@ -41,26 +41,15 @@ body {
 					color: #4af1f1;
 					font-family: $Notof;
 					width: 800px;
-				#typing{ }
-				.typing-bar{
-					width: 0.2em; height: 1em;
-					margin-left: 0.2em;
-					background-color: #4af1f1;
-					display: inline-block; 
-					animation-name: cursor; 
-					animation-duration: 0.3s; 
-					animation-iteration-count: infinite; 
-				} 
-				@keyframes cursor{ 
-					0%{border-right: 1px solid #fff} 
-					50%{border-right: 1px solid #000} 
-					100%{border-right: 1px solid #fff} 
-				}
-					@include tablet {
-						max-width: 100%;
-						font-size: 1.8em;
-						margin-top: 0.5em;
+					#typing{ position: relative; display: inline-block; }
+					#typing::after{
+						content: "";
+						display: block;
+						position: absolute; top: 0; right: -10px; width: 4px; height: 100%;
+						background-color: #dedede;
 					}
+					#typing.active::after{ display: none; }
+					@include tablet { text-align: center;}
 				}
 				.p3 {
 					max-width: 100%;
@@ -77,7 +66,13 @@ body {
 					@include tablet {
 						width: 400px;
 						padding-left: 3em;
+						margin-left: 0;
 					}
+				}
+				@include tablet {
+					margin-top: 1em;
+					font-size: 2.5em;
+					padding-left: 0;
 				}
 			}
 			.p5 {
