--- a/views/contact/contact.pug
+++ b/views/contact/contact.pug
@@ -1,4 +1,6 @@
 extends ../layout/default
+block css 
+  link(rel="stylesheet", href="/css/contact.css")
 block content
   .Ctitle-wrapper
     .color 
