--- a/views/layout/default.pug
+++ b/views/layout/default.pug
@@ -10,6 +10,7 @@ html(lang="ko")
 		link(rel="stylesheet" href="/css/common.css")
 		block css
 		script(src="/js/jquery-3.5.1.min.js")
+		script(src="/js/typed.js") 
 	body
 		include ../include/header
 		block content
