--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -10,27 +10,19 @@ block content
 			.dot1 
 				.html html / css / javascript
 					.Pbox-wrapper
-						.box.a(href="")
-							img.box(src="", alt="")
-						.box.a(href="")
-							img.box(src="", alt="")
-						.box.a(href="")
-							img.box(src="", alt="")
+						a(href="https://sb904-ella.web.app/html/index.html")
+							img(src="", alt="")
+						a(href="")
+						a(href="")
 			.dot2 
 				.node node.js
 					.Pbox-wrapper
-						.box.a(href="")
-							img.box(src="", alt="")
-						.box.a(href="")
-							img.box(src="", alt="")
-						.box.a(href="")
-							img.box(src="", alt="")
+						a(href="https://sb904-note.firebaseapp.com/html/index.html")
+						a(href="")
+						a(href="")
 			.dot3 
 				.vue react / vue
 					.Pbox-wrapper
-						.box.a(href="")
-							img.box(src="", alt="")
-						.box.a(href="")
-							img.box(src="", alt="")
-						.box.a(href="")
-							img.box(src="", alt="")
+						a(href="https://sb904-vue-weather.firebaseapp.com/")
+						a(href="")
+						a(href="")
