--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -1,3 +1,9 @@
+.Pcontainer a {
+  width: 300px;
+  height: 200px;
+  background-color: darksalmon;
+  margin-right: 1.5em;
+}
 .Pcontainer .Ptitle-wrapper {
   position: absolute;
   top: 12%;
@@ -8,14 +14,12 @@
   align-items: baseline;
   font-family: "Source Sans Pro", sans-serif;
 }
-
 .Pcontainer .Ptitle-wrapper .color {
   width: 0.5em;
   height: 0.1em;
   background-color: #4af1f1;
   margin-right: 0.1em;
 }
-
 .Pcontainer .line {
   width: 0.02em;
   height: 70em;
@@ -24,7 +28,6 @@
   top: 25%;
   left: 26.5%;
 }
-
 .Pcontainer .line .dot1 {
   color: #dedede;
   width: 10px;
@@ -36,7 +39,6 @@
   left: -0.24em;
   position: relative;
 }
-
 .Pcontainer .line .dot1 .html {
   width: 300px;
   color: #dedede;
@@ -46,21 +48,12 @@
   top: -30%;
   left: 1.8em;
 }
-
 .Pcontainer .line .dot1 .html .Pbox-wrapper {
   position: absolute;
   top: 2em;
   left: 0;
   display: flex;
 }
-
-.Pcontainer .line .dot1 .html .Pbox-wrapper .box {
-  width: 300px;
-  height: 200px;
-  background-color: #dedede;
-  margin-right: 1.5em;
-}
-
 .Pcontainer .line .dot2 {
   color: #dedede;
   width: 10px;
@@ -71,7 +64,6 @@
   top: 42%;
   left: -0.24em;
 }
-
 .Pcontainer .line .dot2 .node {
   width: 300px;
   color: #dedede;
@@ -81,21 +73,12 @@
   top: -30%;
   left: 1.8em;
 }
-
 .Pcontainer .line .dot2 .node .Pbox-wrapper {
   position: absolute;
   top: 2em;
   left: 0;
   display: flex;
 }
-
-.Pcontainer .line .dot2 .node .Pbox-wrapper .box {
-  width: 300px;
-  height: 200px;
-  background-color: #dedede;
-  margin-right: 1.5em;
-}
-
 .Pcontainer .line .dot3 {
   color: #dedede;
   width: 10px;
@@ -106,7 +89,6 @@
   top: 74%;
   left: -0.24em;
 }
-
 .Pcontainer .line .dot3 .vue {
   width: 300px;
   color: #dedede;
@@ -116,21 +98,12 @@
   top: -30%;
   left: 1.8em;
 }
-
 .Pcontainer .line .dot3 .vue .Pbox-wrapper {
   position: absolute;
   top: 2em;
   left: 0;
   display: flex;
 }
-
-.Pcontainer .line .dot3 .vue .Pbox-wrapper .box {
-  width: 300px;
-  height: 200px;
-  background-color: #dedede;
-  margin-right: 1.5em;
-}
-
 @media screen and (max-width: 1250px) {
   .Pcontainer .line {
     height: 190em;
@@ -175,7 +148,6 @@ body {
   background-color: #1d1d1d;
   background: url(../img/p3-2.jpg) no-repeat center center fixed;
 }
-
 @media screen and (max-width: 515px) {
   body .line {
     display: none;
