--- a/public/scss/projects.scss
+++ b/public/scss/projects.scss
@@ -2,6 +2,9 @@
 
 
 .Pcontainer {
+	a {
+		width: 300px; height: 200px; background-color: darksalmon; margin-right: 1.5em;
+	}
 	.Ptitle-wrapper {
 		position: absolute;
 		top: 12%; left: 15%;
@@ -32,9 +35,6 @@
 				.Pbox-wrapper{
 					position: absolute; top: 2em; left: 0;
 					display: flex;
-					.box {
-						width: 300px; height: 200px; background-color: #dedede; margin-right: 1.5em;
-					}
 				}
 			}
 		}
@@ -50,9 +50,6 @@
 				.Pbox-wrapper{
 					position: absolute; top: 2em; left: 0;
 					display: flex;
-					.box {
-						width: 300px; height: 200px; background-color: #dedede; margin-right: 1.5em;
-					}
 				}
 			}
 		}
@@ -68,9 +65,6 @@
 				.Pbox-wrapper{
 					position: absolute; top: 2em; left: 0;
 					display: flex;
-					.box {
-						width: 300px; height: 200px; background-color: #dedede; margin-right: 1.5em;
-					}
 				}
 			}
 		}
