--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -1,9 +1,35 @@
 .Pcontainer a {
   width: 300px;
-  height: 200px;
-  background-color: darksalmon;
+  background-color: #4af1f1;
   margin-right: 1.5em;
+  position: relative;
+  overflow: hidden;
 }
+
+.Pcontainer a img {
+  width: 100%;
+  height: 100%;
+}
+
+.Pcontainer a .cover {
+  background: rgba(1, 1, 1, 0.4);
+  transition: all .6s;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform: translateY(300px);
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 0.8em;
+  color: #eeeeee;
+  text-align: center;
+  padding-top: 28%;
+}
+
+.Pcontainer a:hover .cover {
+  transform: translateY(0);
+  opacity: 1;
+}
+
 .Pcontainer .Ptitle-wrapper {
   position: absolute;
   top: 12%;
@@ -14,12 +40,14 @@
   align-items: baseline;
   font-family: "Source Sans Pro", sans-serif;
 }
+
 .Pcontainer .Ptitle-wrapper .color {
   width: 0.5em;
   height: 0.1em;
   background-color: #4af1f1;
   margin-right: 0.1em;
 }
+
 .Pcontainer .line {
   width: 0.02em;
   height: 70em;
@@ -28,6 +56,7 @@
   top: 25%;
   left: 26.5%;
 }
+
 .Pcontainer .line .dot1 {
   color: #dedede;
   width: 10px;
@@ -39,6 +68,7 @@
   left: -0.24em;
   position: relative;
 }
+
 .Pcontainer .line .dot1 .html {
   width: 300px;
   color: #dedede;
@@ -48,12 +78,14 @@
   top: -30%;
   left: 1.8em;
 }
+
 .Pcontainer .line .dot1 .html .Pbox-wrapper {
   position: absolute;
   top: 2em;
   left: 0;
   display: flex;
 }
+
 .Pcontainer .line .dot2 {
   color: #dedede;
   width: 10px;
@@ -64,6 +96,7 @@
   top: 42%;
   left: -0.24em;
 }
+
 .Pcontainer .line .dot2 .node {
   width: 300px;
   color: #dedede;
@@ -73,12 +106,14 @@
   top: -30%;
   left: 1.8em;
 }
+
 .Pcontainer .line .dot2 .node .Pbox-wrapper {
   position: absolute;
   top: 2em;
   left: 0;
   display: flex;
 }
+
 .Pcontainer .line .dot3 {
   color: #dedede;
   width: 10px;
@@ -89,6 +124,7 @@
   top: 74%;
   left: -0.24em;
 }
+
 .Pcontainer .line .dot3 .vue {
   width: 300px;
   color: #dedede;
@@ -98,12 +134,14 @@
   top: -30%;
   left: 1.8em;
 }
+
 .Pcontainer .line .dot3 .vue .Pbox-wrapper {
   position: absolute;
   top: 2em;
   left: 0;
   display: flex;
 }
+
 @media screen and (max-width: 1250px) {
   .Pcontainer .line {
     height: 190em;
@@ -116,27 +154,27 @@
     top: 1.2em;
     flex-direction: column;
   }
-  .Pcontainer .line .dot1 .html .Pbox-wrapper .box {
+  .Pcontainer .line .dot1 .html .Pbox-wrapper a {
     margin: 1em 0;
   }
   .Pcontainer .line .dot2 {
-    top: 70em;
+    top: 60em;
   }
   .Pcontainer .line .dot2 .node .Pbox-wrapper {
     top: 1.2em;
     flex-direction: column;
   }
-  .Pcontainer .line .dot2 .node .Pbox-wrapper .box {
+  .Pcontainer .line .dot2 .node .Pbox-wrapper a {
     margin: 1em 0;
   }
   .Pcontainer .line .dot3 {
-    top: 130em;
+    top: 113em;
   }
   .Pcontainer .line .dot3 .vue .Pbox-wrapper {
     top: 1.2em;
     flex-direction: column;
   }
-  .Pcontainer .line .dot3 .vue .Pbox-wrapper .box {
+  .Pcontainer .line .dot3 .vue .Pbox-wrapper a {
     margin: 1em 0;
   }
 }
@@ -148,6 +186,7 @@ body {
   background-color: #1d1d1d;
   background: url(../img/p3-2.jpg) no-repeat center center fixed;
 }
+
 @media screen and (max-width: 515px) {
   body .line {
     display: none;
