--- a/public/scss/projects.scss
+++ b/public/scss/projects.scss
@@ -3,7 +3,19 @@
 
 .Pcontainer {
 	a {
-		width: 300px; height: 200px; background-color: darksalmon; margin-right: 1.5em;
+		width: 300px; background-color: #4af1f1; margin-right: 1.5em; position: relative; overflow: hidden;
+		img { width: 100%; height: 100%; }
+		.cover {
+			background: rgba(1, 1, 1, 0.4);
+			transition: all .6s;
+			width: 100%; height: 100%;
+			position: absolute; transform: translateY(300px);
+			font-family: $Notos; font-size: 0.8em;
+			color: #eeeeee; text-align: center; padding-top: 28%;
+		}
+	}
+	a:hover {
+		.cover{transform: translateY(0); opacity: 1;}
 	}
 	.Ptitle-wrapper {
 		position: absolute;
@@ -77,23 +89,23 @@
 				top: 8em;
 				.html {
 					.Pbox-wrapper{ top: 1.2em; flex-direction: column;
-						.box { margin: 1em 0; }
+						a { margin: 1em 0; }
 					}				
 				}
 			}
 			.dot2 {
-				top: 70em;
+				top: 60em;
 				.node {
 					.Pbox-wrapper{ top: 1.2em; flex-direction: column;
-						.box { margin: 1em 0; }
+						a { margin: 1em 0; }
 					}				
 				}
 			}
 			.dot3 {
-				top: 130em;
+				top: 113em;
 				.vue {
 					.Pbox-wrapper{ top: 1.2em;  flex-direction: column;
-						.box { margin: 1em 0; }
+						a { margin: 1em 0; }
 					}				
 				}
 			}
