--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -15,6 +15,7 @@ block content
 					.Pbox-wrapper
 						a(href="https://sb904-ella.web.app/html/index.html")
 							.cover ELLA 쇼핑몰
+								div 2021.02.23~2021.03.02
 							img(src="/img/ella.png", alt="")
 						a(href="")
 							.cover 날씨 앱
