--- a/views/home/home.pug
+++ b/views/home/home.pug
@@ -12,7 +12,7 @@ block content
 				.p.hello 안녕하세요
 				.title
 					.p.p2 
-						#typing 
+						#typing &nbsp;
 					.p.p3 이세빈
 						.p.p4 입니다.
 				.p5 Welcome My PROTFOLIO
